// health.proto
// videar
// 
// purpose:
// define health grpc procedures

syntax = "proto3";

import "common.proto";

package health;

message HealthError {
    int32 type = 1;
    string msg = 2;
}

message HealthStatus {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}

service HealthService {
    rpc StatusCheck (Empty) returns (HealthStatus);

    rpc LastError (Empty) returns (HealthError);
}
